# ocaml-blake3-mini

./: .gitignore  blake3-mini.opam  dune  dune-project  dune-workspace.dev  flake.nix
.github/: ci.yml
.github/workflows/: ci.yml
rules/: blake3-amd64-asm.dune  blake3-amd64.dune  blake3-neon-intrinsics.dune  blake3-none.dune  blake3-x86-intrinsics.dune
src/: blake3_mini.ml  blake3_mini.mli  blake3_stubs.c  dune
test/: blake3-archive.t  blake3_mini_tests.ml  dune
