; There are 4 "profiles" for the blake3 rules:
; 1. Handwritten assembly for x86_64
; 2. SIMD instructions with neon intrinsics for arm64
; 3. SIMD instructions with x86 intrinsics for amd64
; 4. Portable C implementation

; TODO: Choose this during compile time

(rule
 (action
  (copy rules/blake3-amd64-asm.dune blake3_rules)))

(rule
 (action
  (copy rules/blake3-x86-intrinsics.dune blake3_rules)))

(rule
 (action
  (copy rules/blake3-none.dune blake3_rules)))
