(rule
 (with-stdout-to
  somefile
  (echo 111XXXYYYZZ)))

(library
 (name blake3_mini_tests)
 (inline_tests
  (deps somefile))
 (libraries
  unix
  blake3_mini
  ;; This is because of the (implicit_transitive_deps false)
  ;; in dune-project
  ppx_expect.config
  ppx_expect.config_types
  ppx_expect
  base
  ppx_inline_test.config)
 (preprocess
  (pps ppx_expect)))
